# national_tech

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/default/: default.frag  default.vert
resources/shaders/instanced/: instanced.vert
resources/textures/: atlas_generator.py
resources/textures/blocks/: block_atlas.json  universe_block_atlas.json
src/: main.cpp
src/game/blocks/: blocks.hpp  blocks_mesh_builder.hpp  blocks_types.hpp
src/game/chuck/: chuck_manager.hpp  chunk_mesh_optimizer.hpp  greedy_meshing.hpp
src/game/generator/: perlin_noise.cpp  perlin_noise.hpp  terrain_generator.cpp  terrain_generator.hpp
src/renderer/camera/: camera.cpp  camera.hpp
src/renderer/mesh/: frustum.cpp  frustum.hpp  indexed_mesh.hpp  mesh.cpp  mesh.hpp
src/renderer/render/: instanced_block_renderer.hpp
src/renderer/shader/: shader.cpp  shader.hpp
src/renderer/texture/: texture.cpp  texture.hpp  texture_atlas.hpp
src/utils/: check.hpp  file.cpp  file.hpp  logger.hpp
src/utils/logger/: logger.cpp  logger.hpp
src/utils/read_file/: file.cpp
